--- a/wp-content/themes/mao/assets/sass/style.scss
+++ b/wp-content/themes/mao/assets/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,600;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,600;1,800&display=swap');
 @import 'variables';
 @import 'utils';
 @import 'reset';
@@ -26,6 +26,11 @@
     margin-right: 5px;
     font-size: 24px;
     font-weight: 800;
+    font-style: italic;
+  }
+
+  &__title {
+    font-style: italic;
   }
 
   &__content {
@@ -36,4 +41,8 @@
       margin-top: 10px;
     }
   }
+}
+
+.m-font-sanserif {
+  font-family: $font-sansserif;
 }
