--- a/wp-content/themes/mao/assets/sass/style.scss
+++ b/wp-content/themes/mao/assets/sass/style.scss
@@ -10,9 +10,18 @@
 @import 'modules/schedule';
 @import 'modules/works';
 
-.m-wrapper {
+.m-container {
   position: fixed;
+  width: 100%;
+  height: 100%;
   background-image: url('../images/top.jpg');
   background-size: cover;
   overflow: scroll;
+
+  $pages: 'top', 'about-mao', 'works', 'schedule', 'good-fellows', 'contact';
+  @each $page in $pages {
+    &.#{$page} {
+      background-image: url('../images/#{$page}.jpg');
+    }
+  }
 }
