--- a/wp-content/themes/mao/assets/sass/style.scss
+++ b/wp-content/themes/mao/assets/sass/style.scss
@@ -11,11 +11,15 @@
 @import 'modules/schedule';
 @import 'modules/works';
 
+.m-wrapper {
+  background-image: url('../images/default.jpg');
+  background-size: cover;
+}
+
 .m-container {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-image: url('../images/default.jpg');
   background-size: cover;
   overflow: scroll;
 
@@ -25,4 +29,15 @@
       background-image: url('../images/#{$page}.jpg');
     }
   }
+}
+
+.fade-enter-active {
+  transition: opacity 0.4s;
+}
+.fade-leave-active {
+  transition: opacitt 0.2s;
+}
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
