--- a/wp-content/themes/yuri-fukuoka/assets/sass/_reset.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_reset.scss
@@ -16,6 +16,7 @@ html {
   color: $color-text;
   border: 0;
   outline: none;
+  background-color: $color-background;
 
   font-feature-settings: 'palt';
   -webkit-font-smoothing: antialiased;
