--- a/wp-content/themes/yuri-fukuoka/assets/sass/_reset.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_reset.scss
@@ -60,7 +60,7 @@ section,
 summary,
 blockquote {
   font-family: $font-default;
-  font-size: 1.4rem;
+  font-size: $font-size-md;
   font-weight: normal;
   font-style: normal;
   line-height: 1.6;
