--- a/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
@@ -11,11 +11,18 @@ $color-background: #fffefa;
 
 /* width
 ----------------- */
+$width-default: 800px;
 $width-header: 1000px;
 
 /* font families
 ----------------- */
 $font-default: 'Noto Serif JP', serif;
+
+/* font size
+----------------- */
+$font-size-md: 14px;
+$font-size-lg: 16px;
+$font-size-xlg: 24px;
 
 /* break points
 ----------------- */
