--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -3,7 +3,11 @@
 @import 'utils';
 @import 'reset';
 
+@import 'modules/access';
+@import 'modules/classes';
 @import 'modules/header';
 @import 'modules/layout';
+@import 'modules/profile';
 @import 'modules/qa';
 @import 'modules/transition';
+@import 'modules/typography';
