--- a/wp-content/themes/yuri-fukuoka/assets/sass/_utils.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_utils.scss
@@ -1,17 +1,11 @@
 @mixin screen-sm() {
-  @media screen and (max-width: $breakpoint-sm - 1) {
-    @content;
-  }
-}
-
-@mixin screen-md() {
-  @media screen and (min-width: $breakpoint-sm) {
+  @media screen and (max-width: $breakpoint - 1) {
     @content;
   }
 }
 
 @mixin screen-lg() {
-  @media screen and (min-width: $breakpoint-lg) {
+  @media screen and (min-width: $breakpoint) {
     @content;
   }
 }
