--- a/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
@@ -11,7 +11,7 @@ $color-background: #fffefa;
 
 /* width
 ----------------- */
-$width-default: 800px;
+$width-default: 750px;
 $width-header: 1000px;
 
 /* font families
@@ -20,11 +20,12 @@ $font-default: 'Noto Serif JP', serif;
 
 /* font size
 ----------------- */
+$font-size-sm: 11px;
 $font-size-md: 14px;
 $font-size-lg: 16px;
-$font-size-xlg: 24px;
+$font-size-xlg: 20px;
+$font-size-xxlg: 24px;
 
 /* break points
 ----------------- */
-$breakpoint-sm: 640px;
-$breakpoint-lg: 1000px;
+$breakpoint: 600px;
