ライブページ

--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -3,11 +3,13 @@
 @import 'utils';
 @import 'reset';
 
+@import 'modules/typography';
+
 @import 'modules/access';
 @import 'modules/classes';
 @import 'modules/header';
 @import 'modules/layout';
+@import 'modules/live';
 @import 'modules/profile';
 @import 'modules/qa';
 @import 'modules/transition';
-@import 'modules/typography';
