お問い合わせフォーム

--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -7,6 +7,7 @@
 
 @import 'modules/access';
 @import 'modules/classes';
+@import 'modules/contact';
 @import 'modules/header';
 @import 'modules/layout';
 @import 'modules/live';
