スタイル共通化

--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/access.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/access.scss
@@ -20,14 +20,7 @@
   }
 
   &__content {
-    word-break: break-word;
-    > h2 {
-      @extend .y-title-3;
-    }
-
-    > p {
-      margin: 10px 0;
-    }
+    @extend .y-content;
   }
 
   &__map {
