--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/profile.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/profile.scss
@@ -22,13 +22,6 @@
   }
 
   &__content {
-    word-break: break-word;
-    > h2 {
-      @extend .y-title-3;
-    }
-
-    > p {
-      margin: 10px 0;
-    }
+    @extend .y-content;
   }
 }
