--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/typography.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/typography.scss
@@ -28,3 +28,19 @@
   display: inline;
   font-weight: bold;
 }
+
+.y-content {
+  word-break: break-word;
+  > h2 {
+    @extend .y-title-3;
+  }
+
+  > p {
+    margin: 15px 0;
+  }
+
+  a {
+    color: $color-gray;
+    text-decoration: underline;
+  }
+}
