--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'modules/header';
 @import 'modules/layout';
 @import 'modules/live';
+@import 'modules/photo';
 @import 'modules/profile';
 @import 'modules/qa';
 @import 'modules/transition';
