--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600&display=swap');
 @import 'variables';
 @import 'utils';
 @import 'reset';
@@ -15,4 +15,5 @@
 @import 'modules/photo';
 @import 'modules/profile';
 @import 'modules/qa';
+@import 'modules/top';
 @import 'modules/transition';
