--- a/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
@@ -3,11 +3,12 @@
 /* colors
 ----------------- */
 $color-black: #231d1b;
+$color-white: #fffefa;
 $color-gray: #ded6d4;
 $color-main: #f2a95b;
 
 $color-text: $color-black;
-$color-background: #fffefa;
+$color-background: $color-white;
 
 /* width
 ----------------- */
