--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'modules/access';
 @import 'modules/classes';
 @import 'modules/contact';
+@import 'modules/footer';
 @import 'modules/header';
 @import 'modules/layout';
 @import 'modules/live';
