フラメンコトップ

--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
@@ -1,3 +1,63 @@
+.y-classmain {
+  height: 540px;
+  background-repeat: no-repeat;
+  background-position: left;
+
+  &--flamenco {
+    background-image: url('../images/classes_flamenco.png');
+    color: $color-white;
+  }
+
+  &__inner {
+    max-width: $width-header;
+    margin: auto;
+    padding: 10px;
+  }
+
+  &__subtitle,
+  &__title,
+  &__text,
+  &__about,
+  &__abouttitle,
+  &__abouttext {
+    color: inherit;
+  }
+
+  &__subtitle {
+    margin-top: 50px;
+    font-size: $font-size-lg;
+  }
+
+  &__title {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+
+  &__text {
+    margin: 10px 0;
+
+    > a {
+      text-decoration: underline;
+      transition: opacity 0.3s;
+
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
+
+  &__about {
+    background-color: rgba($color-white, 0.3);
+    margin: 30px 0;
+    padding: 15px 20px;
+  }
+
+  &__abouttitle {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+}
+
 .y-classes {
   &__item {
     margin-bottom: 50px;
