--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
@@ -8,6 +8,11 @@
     color: $color-white;
   }
 
+  &--yoga {
+    background-position: right;
+    background-image: url('../images/classes_yoga.png');
+  }
+
   &__inner {
     max-width: $width-header;
     margin: auto;
