--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/typography.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/typography.scss
@@ -46,7 +46,12 @@
   }
 
   a {
-    color: $color-gray;
+    color: $color-darkgray;
     text-decoration: underline;
+    transition: opacity 0.3s;
+
+    &:hover {
+      opacity: 0.6;
+    }
   }
 }
