--- a/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/_variables.scss
@@ -5,6 +5,7 @@
 $color-black: #231d1b;
 $color-white: #fffefa;
 $color-gray: #ded6d4;
+$color-darkgray: #908e8b;
 $color-main: #f2a95b;
 
 $color-text: $color-black;
@@ -30,3 +31,7 @@ $font-size-xxlg: 24px;
 /* break points
 ----------------- */
 $breakpoint: 600px;
+
+/* z-index
+----------------- */
+$z-index-header: 100;
