--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
@@ -67,12 +67,15 @@
 
   &__flamenco {
     text-align: right;
+    background-color: #342a28;
     .y-mainview__text {
       align-items: flex-end;
       color: $color-background;
     }
   }
-
+  &__yoga {
+    background-color: #b57940;
+  }
   &__subtext {
     font-size: $font-size-lg;
     color: inherit;
