画像・テキスト修正

--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
@@ -10,8 +10,8 @@
   }
 
   &--yoga {
-    background-position: right;
-    background-color: #c47e3f;
+    background-position: center;
+    background-color: #e9dede;
     background-image: url('../images/classes_yoga.png');
   }
 
@@ -54,7 +54,7 @@
   }
 
   &__about {
-    background-color: rgba($color-white, 0.3);
+    background-color: rgba($color-white, 0.4);
     margin: 30px 0;
     padding: 15px 20px;
   }
