--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
@@ -1,3 +1,5 @@
+$breakpoint-mainview: 900px;
+
 .y-top {
   &__menu {
     margin: 50px 0;
@@ -6,9 +8,13 @@
     text-align: center;
     position: relative;
     max-width: $width-default;
-    margin: 50px auto;
+    margin: 50px 10px;
     border: 3px solid $color-black;
     background-color: #fff;
+
+    @include screen-lg {
+      margin: 50px auto;
+    }
 
     &::before {
       content: '';
@@ -19,8 +25,16 @@
       bottom: 2px;
       left: 2px;
     }
-    > p {
-      line-height: 3;
+  }
+  &__copytext {
+    padding: 0 20px;
+    line-height: 3;
+
+    @include screen-sm {
+      line-height: 2;
+      > br {
+        display: none;
+      }
     }
   }
 
@@ -34,55 +48,79 @@
       > strong {
         font-size: 1.2em;
       }
-
-      &:first-child {
-        padding-right: 80px;
-      }
-      &:nth-child(2) {
-        padding-left: 80px;
+      @include screen-lg {
+        &:first-child {
+          padding-right: 80px;
+        }
+        &:nth-child(2) {
+          padding-left: 80px;
+        }
       }
     }
   }
 }
 
 .y-mainview {
-  display: flex;
+  @media screen and (min-width: $breakpoint-mainview) {
+    display: flex;
+  }
   &__flamenco,
   &__yoga {
-    position: relative;
-    width: 50%;
+    width: 100%;
+    background-repeat: no-repeat;
+    @media screen and (min-width: $breakpoint-mainview) {
+      width: 50%;
+    }
   }
   &__text {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: auto;
     padding: 20px;
+    height: 50vh;
+    @media screen and (min-width: $breakpoint-mainview) {
+      height: 800px;
+    }
   }
 
   &__flamenco {
     text-align: right;
     background-color: #020202;
+    background-image: url('../images/main_flamenco-sp.jpg');
+
+    @media screen and (min-width: $breakpoint-mainview) {
+      background-position: right;
+      background-image: url('../images/main_flamenco.jpg');
+    }
     .y-mainview__text {
       align-items: flex-end;
       color: $color-background;
     }
   }
   &__yoga {
-    background-color: #ebdbdb;
+    background-position: right;
+    background-color: #f1e1e1;
+    background-image: url('../images/main_yoga-sp.jpg');
+
+    @media screen and (min-width: $breakpoint-mainview) {
+      background-position: left;
+      background-image: url('../images/main_yoga.jpg');
+    }
   }
   &__subtext {
-    font-size: $font-size-lg;
+    font-size: $font-size-md;
     color: inherit;
+    @include screen-lg {
+      font-size: $font-size-lg;
+    }
   }
 
   &__maintext {
-    font-size: 26px;
+    font-size: 20px;
+    @include screen-lg {
+      font-size: 26px;
+    }
     color: inherit;
   }
 }
