--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/header.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/header.scss
@@ -18,17 +18,43 @@
   }
 
   &__menu {
-    display: flex;
-    justify-content: center;
+    @include screen-lg {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  &__menuTrigger {
+    display: block;
+    line-height: 50px;
+    text-align: center;
+    transition: opacity 0.3s;
+    cursor: pointer;
+
+    @include screen-lg {
+      display: none;
+    }
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    > img {
+      margin-left: 5px;
+      width: 20px;
+      height: 20px;
+      vertical-align: middle;
+    }
   }
 
   &__item,
   &__link {
     position: relative;
-    display: inline-block;
+    display: block;
     margin: 0 10px;
     padding: 0 10px;
     line-height: 50px;
+    text-align: center;
     transition: opacity 0.3s;
     cursor: pointer;
 
@@ -48,6 +74,10 @@
       width: 20px;
       text-align: center;
     }
+
+    @include screen-lg {
+      display: inline-block;
+    }
   }
 
   &__accordion {
@@ -55,13 +85,17 @@
   }
 
   &__accordionMenu {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    margin: 0 10px;
-    z-index: $z-index-header;
-    background-color: #fff;
-    box-shadow: 0 3px 3px rgba(#000, 0.1);
+    text-align: center;
+    padding: 0 20px;
+
+    @include screen-lg {
+      position: absolute;
+      left: 0;
+      top: 100%;
+      z-index: $z-index-header;
+      background-color: rgba($color-white, 0.7);
+      text-align: left;
+    }
   }
 
   &__accordionItem {
