スタイル調整

--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/footer.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/footer.scss
@@ -52,8 +52,11 @@
 
     > a {
       display: block;
-      margin-left: 10px;
       transition: opacity 0.3s;
+
+      &:not(:first-child) {
+        margin-left: 10px;
+      }
 
       &:hover {
         opacity: 0.6;
