--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/photo.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/photo.scss
@@ -1,4 +1,10 @@
 .y-photo {
+  &__topDescription {
+    margin: 30px 0;
+    text-align: center;
+    color: $color-darkgray;
+  }
+
   &__date {
     font-size: $font-size-sm;
   }
