ヨガクラスページに予約ボタン追加

--- a/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'modules/typography';
 
 @import 'modules/access';
+@import 'modules/button';
 @import 'modules/classes';
 @import 'modules/contact';
 @import 'modules/footer';
