--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/classes.scss
@@ -71,6 +71,16 @@
 }
 
 .y-classes {
+  &__buttonArea {
+    margin: 30px auto;
+    text-align: center;
+  }
+
+  &__button {
+    margin: 10px auto;
+    width: 200px;
+  }
+
   &__item {
     margin-bottom: 50px;
   }
