--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/photo.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/photo.scss
@@ -15,12 +15,15 @@
 
   &__content {
     @extend .y-content;
+    margin: 20px 0;
 
     .wp-block-gallery .blocks-gallery-item {
-      margin-right: 20px;
-      width: 230px;
       height: 230px;
       cursor: pointer;
+
+      .blocks-gallery-item__caption {
+        display: none;
+      }
     }
   }
 }
