--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/footer.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/footer.scss
@@ -44,6 +44,34 @@
     }
   }
 
+  &__sns {
+    @include screen-sm {
+      margin: 30px 0;
+    }
+  }
+
+  &__snslink {
+    display: flex;
+    align-items: center;
+    color: $color-white;
+    line-height: 30px;
+    transition: opacity 0.3s;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    @include screen-lg {
+      justify-content: flex-end;
+      line-height: 40px;
+    }
+
+    > i {
+      line-height: 1;
+      font-size: 20px;
+    }
+  }
+
   &__banners {
     display: flex;
     justify-content: flex-end;
@@ -67,8 +95,11 @@
   &__copyright {
     max-width: $width-header;
     margin: auto;
-    text-align: right;
     display: block;
     color: $color-white;
+
+    @include screen-lg {
+      text-align: right;
+    }
   }
 }
