--- a/wp-content/themes/maho-okada/assets/sass/style.scss
+++ b/wp-content/themes/maho-okada/assets/sass/style.scss
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Noto+Serif+JP:wght@300;600&display=swap');
 @import 'variables';
 @import 'utils';
 @import 'reset';
+@import 'icons';
+
+@import 'footer';
+@import 'layout';
+
+@import 'pages/biography';
+@import 'pages/front';
