feat: スクロールでヘッダー固定

--- a/wp-content/themes/maho-okada/assets/sass/_variables.scss
+++ b/wp-content/themes/maho-okada/assets/sass/_variables.scss
@@ -20,7 +20,15 @@ $font-size-md: 16px;
 ----------------- */
 $width-default: 600px;
 
+/* width
+----------------- */
+$height-header: 60px;
+
 /* break points
 ----------------- */
 $breakpoint-sm: 640px;
 $breakpoint-lg: 1000px;
+
+/* z-index
+----------------- */
+$z-index-header: 100;
