--- a/wp-content/themes/maho-okada/assets/sass/menu.scss
+++ b/wp-content/themes/maho-okada/assets/sass/menu.scss
@@ -7,7 +7,8 @@
   &__link {
     @extend %hover-style;
     display: block;
+    line-height: $height-header;
     margin: 0 5px;
-    padding: 15px;
+    padding: 0 15px;
   }
 }
