--- a/wp-content/themes/maho-okada/assets/sass/menu.scss
+++ b/wp-content/themes/maho-okada/assets/sass/menu.scss
@@ -2,6 +2,10 @@
   &__list {
     display: flex;
     justify-content: center;
+
+    @include screen-sm {
+      flex-direction: column;
+    }
   }
 
   &__link {
