--- a/wp-content/themes/maho-okada/assets/sass/_variables.scss
+++ b/wp-content/themes/maho-okada/assets/sass/_variables.scss
@@ -14,6 +14,7 @@ $font-default: 'Crimson Text', 'Noto Serif JP', 'ヒラギノ明朝 ProN W3',
 
 /* font size
 ----------------- */
+$font-size-sm: 12px;
 $font-size-md: 16px;
 
 /* width
