--- a/wp-content/themes/maho-okada/assets/sass/footer.scss
+++ b/wp-content/themes/maho-okada/assets/sass/footer.scss
@@ -5,7 +5,7 @@
     display: block;
     padding: 10px 0;
     text-align: center;
-    font-size: 12px;
+    font-size: $font-size-sm;
     color: $color-accent;
   }
 }
