--- a/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
+++ b/wp-content/themes/yuri-fukuoka/assets/sass/modules/top.scss
@@ -4,6 +4,22 @@ $breakpoint-mainview: 900px;
   &__menu {
     margin: 50px 0;
   }
+
+  &__head {
+    margin: 50px 0;
+  }
+
+  &__head-button {
+    margin: 20px auto;
+    max-width: 380px;
+  }
+
+  &__head-text {
+    @extend .y-content;
+    margin: 20px auto;
+    text-align: center;
+  }
+
   &__copy {
     text-align: center;
     position: relative;
