ウクレレ キッズ部門追加

--- a/wp-content/themes/ukulele/assets/stylesheets/_fonts.scss
+++ b/wp-content/themes/ukulele/assets/stylesheets/_fonts.scss
@@ -36,21 +36,24 @@ i[class^="icon-"]:before, i[class*=" icon-"]:before {
 .icon-instrument:before {
     content: "\f106";
 }
-.icon-left:before {
+.icon-kids:before {
     content: "\f107";
 }
-.icon-photo:before {
+.icon-left:before {
     content: "\f108";
 }
-.icon-play:before {
+.icon-photo:before {
     content: "\f109";
 }
-.icon-right:before {
+.icon-play:before {
     content: "\f10a";
 }
-.icon-song:before {
+.icon-right:before {
     content: "\f10b";
 }
-.icon-up:before {
+.icon-song:before {
     content: "\f10c";
+}
+.icon-up:before {
+    content: "\f10d";
 }
